production bug on small screen

--- a/src/app/portfolio/components/tradings/trade-entry/trade-entry.component.css
+++ b/src/app/portfolio/components/tradings/trade-entry/trade-entry.component.css
@@ -1,7 +1,5 @@
-
-.form-wrapper {
-  padding-top: 15px;
-  padding-bottom: 15px;
+.form-wrapper {  
+  padding: 15px 10px;
 }
 
 .row-wrapper {
