--- a/src/app/tools/vwap-calculator/vwap-calculator.component.css
+++ b/src/app/tools/vwap-calculator/vwap-calculator.component.css
@@ -1,5 +1,5 @@
 .textbox {
-  width: 30vh;
+  width: 120px;
   padding-top: 16px;
 }
 
